@@ -4,6 +4,7 @@
  - Fix encoding in Changes file.
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
  - Implement station order.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
  - Rewrite XML map to new version with line IDs.
  - Update Module::Install to 1.19 version.
